--- a/index.html
+++ b/index.html
@@ -11,30 +11,46 @@
     
 </head>
 <body>
-    <div class="container">
-        <div class="calculator-grid">
-            <div class="output">
-                <div data-previous-operand class="previous-operand"></div>
-                <div data-current-operand class="current-operand"></div>
+    <main>
+        <div class="container">
+            <div class="calculator-grid">
+                <div class="output">
+                    <div data-previous-operand class="previous-operand"></div>
+                    <div data-current-operand class="current-operand"></div>
+                </div>
+                <button data-all-clear class="span-two">AC</button>
+                <button data-delete>DEL</button>
+                <button data-operation>÷</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-operation>*</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-operation>+</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-operation>-</button>
+                <button data-number>.</button>
+                <button data-number>0</button>
+                <button data-equals class="span-two">=</button>
             </div>
-            <button data-all-clear class="span-two">AC</button>
-            <button data-delete>DEL</button>
-            <button data-operation>÷</button>
-            <button data-number>1</button>
-            <button data-number>2</button>
-            <button data-number>3</button>
-            <button data-operation>*</button>
-            <button data-number>4</button>
-            <button data-number>5</button>
-            <button data-number>6</button>
-            <button data-operation>+</button>
-            <button data-number>7</button>
-            <button data-number>8</button>
-            <button data-number>9</button>
-            <button data-operation>-</button>
-            <button data-number>.</button>
-            <button data-number>0</button>
-            <button data-equals class="span-two">=</button>
+        </div>
+    </main>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <div id="message">
+                <h2>Atenção!</h2>
+
+                <p>Não é possível dividir por zero.</p>
+
+                <div class="input-modal action">
+                    <a onclick="calculator.modalClose()" href="#" class="button confirm">OK</a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -45,7 +61,7 @@
             max: 5,
             speed: 400,
             glare: true,
-            "max-glare": .2,
+            "max-glare": .1,
         });
     </script>
 </body>
