Modal changes, project recreated in "modules"
--- BR

Foram feitas mudanças no desing do modal e projeto foi recriado usando "modules". Os arquivos de css foram particionados para uma melhor legibilidade, assim como os arquivos js.

--- EN

Changes were made to the modal design and the project was recreated using "modules". The css files have been partitioned for better readability, as are the js files.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="icon" href="styles/img/calculator.png">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/main.js" defer ></script>
-    
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/modal.css">
+    <script src="./scripts/app.js" type="module" defer ></script>
 </head>
 <body>
     <main>
@@ -48,7 +48,7 @@
                 <p>Não é possível dividir por zero.</p>
 
                 <div class="input-modal action">
-                    <a onclick="calculator.modalClose()" href="#" class="button confirm">OK</a>
+                    <a href="#" class="button confirm">OK</a>
                 </div>
             </div>
         </div>
